web-infras/parser/tests/fixtures/babel/core/uncategorised/518/output.txt
[SyntaxError]: duplicate params (1,16)
1|(function a(t, t) { "use strict"; })
 |              ^
